pamc/src/tests/sample_code/should_fail/multi_file/bind/leaky_use_single/src/foo.ph
pub(pack) type Foo {
    .C: Foo,
}
